# pnd_project

./: .gitignore  README.md  isswrapper-0.1.0-py2.py3-none-any.whl  mb_new_parser.py  pyproject.toml  requirements.txt  requirements1.txt
datasets/: events.parquet  pnd_token_date.parquet  sec_names.parquet
datasets/old/: f_desc.docx  merged_full_df.json
notebooks/: EDA.ipynb  main.ipynb  sitenews_data_explained.ipynb  test.ipynb
scripts/: date_preprocessing_functions.py  mb_new_parser.py
src/pnd_moex/general/: moex_selenium_parser.py  scraper.py
src/pnd_moex/util/: date_preprocessing_functions.py
